# ai-mcp-skills-guide

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  mypy.ini  pyproject.toml
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release.yml
docs/: api-reference.md  architecture.md  faq.md  quickstart.md  roadmap.md  skill-development-guide.md  tech-selection.md  troubleshooting.md  use-cases.md
docs/superpowers/plans/: 2026-06-30-repo-enrichment.md
examples/: README.md
examples/advanced-patterns/: orchestration.py  run_demo.py
examples/basic-skill/: run_demo.py  skill.py
examples/http-skill/: run_demo.py
examples/mcp-integration/: mcp_server.py  run_demo.py
src/ai_mcp_skills/: __init__.py  http_skill.py  mcp.py  orchestration.py  skill.py
tests/: test_http_skill.py  test_mcp.py  test_orchestration.py  test_package.py  test_skill.py
